--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  }
+  },
+  "description": "After cloning the github, you will want to do the following to get the code running on your computer.",
+  "version": "1.0.0",
+  "main": "hardhat.config.js",
+  "author": "",
+  "license": "ISC"
 }
